examples/errors/parse_error.lox
// This file demonstrates parse error reporting
// Missing expression after the + operator

var x = 10
var y = 20 +
print x
